Criando o Botão de cor verde

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Simple Paint</string>
     <string name="limpar">Limpar</string>
+    <string name="corverde">Cor Verde</string>
 </resources>
